# boltz

./: .pre-commit-config.yaml  pyproject.toml
examples/: multimer.yaml
scripts/process/: mmcif.py
src/boltz/: main.py
src/boltz/data/: const.py  mol.py  types.py
src/boltz/data/feature/: featurizer.py  featurizerv2.py  util.py
src/boltz/data/module/: inference.py  inferencev2.py
src/boltz/data/parse/: a3m.py  csv.py  schema.py
src/boltz/data/tokenize/: boltz.py
src/boltz/data/write/: writer.py
src/boltz/model/: model.py
src/boltz/model/layers/: dropout.py  initialize.py  pair_averaging.py  pairformer.py  transition.py
src/boltz/model/models/: boltz1.py  boltz2.py
src/boltz/model/modules/: encoders.py  encodersv2.py  trunk.py  trunkv2.py
tests/: test_regression.py
